[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlassian-confluence-mcp"
version = "1.0.0"
description = "MCP server for Confluence with dual auth (Cloud + Data Center), pages, spaces, search, and more"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Troy Larson", email = "troy.larson@gmail.com"},
]
keywords = ["confluence", "mcp", "model-context-protocol", "fastmcp", "atlassian", "wiki"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=3.0.0,<4",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.22.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "hatch",
]

[project.scripts]
atlassian-confluence-mcp = "confluence_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/troylar/atlassian"
Repository = "https://github.com/troylar/atlassian"
Issues = "https://github.com/troylar/atlassian/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/confluence_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/confluence_mcp_server",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
    "-v",
]

[tool.coverage.run]
source = ["src/confluence_mcp_server"]
omit = ["*/tests/*", "*/__pycache__/*", "*/server.py", "*/tools/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
